# ncb-tagger-analysis

./: compile.sh  setup.sh
source/NCBanalysis/: CMakeLists.txt  Makefile
source/NCBanalysis/NCBanalysis/: BeamBackgroundData.h  BeamBackgroundFiller.h  BeamIntensityTool.h  BunchStructureTool.h  HistTool.h  IBeamIntensityTool.h  IBunchStructureTool.h  IHistTool.h  INtupleWriterTool.h  MisIdProb.h  NtupleWriter.h  NtupleWriterTool.h  RunQueryPickleTool.h
source/NCBanalysis/data/: trigger-list-L1.txt
source/NCBanalysis/data/BeamIntensityTool/: 266904.txt  266919.txt  267073.txt  267152.txt  267162.txt  267167.txt  267358.txt  267359.txt  267360.txt  267367.txt  267385.txt  267599.txt  267638.txt  267639.txt  270441.txt  270588.txt  271744.txt  276954.txt  296939.txt  296942.txt  297447.txt  297730.txt  298591.txt  298595.txt  298609.txt  298633.txt  298687.txt  298690.txt  298771.txt  298773.txt  298862.txt  298967.txt  299055.txt  299144.txt  299147.txt  299184.txt  299241.txt  299243.txt  299278.txt  299288.txt  (+637 more)
source/NCBanalysis/data/BunchStructureTool/: 266904.txt  266919.txt  267073.txt  267152.txt  267162.txt  267167.txt  267358.txt  267359.txt  267360.txt  267367.txt  267385.txt  267599.txt  267638.txt  267639.txt  270441.txt  270588.txt  271744.txt  276954.txt  296939.txt  296942.txt  297447.txt  297730.txt  298591.txt  298595.txt  298609.txt  298633.txt  298687.txt  298690.txt  298771.txt  298773.txt  298862.txt  298967.txt  299055.txt  299144.txt  299147.txt  299184.txt  299241.txt  299243.txt  299278.txt  299288.txt  (+639 more)
source/NCBanalysis/data/GRL/: data12_8TeV.periodAllYear_HEAD_DQDefects-00-01-02_PHYS_StandardGRL_All_Good.xml  data15_13TeV.periodAllYear_HEAD_DQDefects-00-02-02_PHYS_StandardGRL_All_Good.xml  data16_13TeV.periodAllYear_HEAD_DQDefects-00-02-04_PHYS_StandardGRL_All_Good.xml  data17_13TeV.periodAllYear_HEAD_Unknown_PHYS_StandardGRL_All_Good.xml
source/NCBanalysis/data/LuminosityTool/: 266904.txt  266919.txt  267073.txt  267152.txt  267162.txt  267167.txt  270441.txt  270588.txt  271744.txt  296939.txt  296942.txt  324320.txt  324340.txt  348197.txt  348251.txt  348354.txt  348403.txt  348495.txt  348511.txt  348609.txt  348618.txt  348836.txt  348885.txt  348894.txt  349011.txt  349014.txt  349033.txt  349051.txt  349111.txt  349114.txt  349169.txt  349268.txt  349309.txt  349327.txt  349335.txt  349451.txt  349481.txt  349498.txt  349526.txt  349533.txt  (+29 more)
source/NCBanalysis/data/RunQueryPickleTool/: 266904.pickle  266904.root  266919.pickle  266919.root  267073.pickle  267073.root  267152.pickle  267152.root  267162.pickle  267162.root  267167.pickle  267167.root  267358.pickle  267358.root  267359.pickle  267359.root  267360.pickle  267360.root  267367.pickle  267367.root  (+1329 more)
source/NCBanalysis/run/: MisIdProb_jobOptions.py  MisIdProb_local.sh  NtupleWriter_jobOptions.py  NtupleWriter_local.sh  compile.sh
source/NCBanalysis/src/: BIBTaggerMisIdProb.h  BeamBackgroundData.cxx  BeamBackgroundFiller.cxx  BeamIntensityTool.cxx  BunchStructureTool.cxx  HistTool.cxx  MisIdProb.cxx  NtupleWriter.cxx  NtupleWriterTool.cxx  RunQueryPickleTool.cxx
(+144 files in other folders)
